feat(vscode-extension): T18.1 - Initialize VS Code extension structure and dashboard view

--- a/note-app-vs-code/.vscode/launch.json
+++ b/note-app-vs-code/.vscode/launch.json
@@ -33,6 +33,18 @@
 				"${workspaceFolder}/dist/web/**/*.js"
 			],
 			"preLaunchTask": "${defaultBuildTask}"
+		},
+		{
+			"name": "Run Extension (Desktop)",
+			"type": "extensionHost",
+			"request": "launch",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}"
+			],
+			"outFiles": [
+				"${workspaceFolder}/dist/**/*.js"
+			],
+			"preLaunchTask": "${defaultBuildTask}"
 		}
 	]
 }
