--- a/note-app-vs-code/package.json
+++ b/note-app-vs-code/package.json
@@ -53,6 +53,7 @@
     "@types/vscode": "^1.106.1",
     "@types/mocha": "^10.0.10",
     "@types/assert": "^1.5.11",
+    "@types/sinon": "^17.0.3",
     "eslint": "^9.39.1",
     "typescript-eslint": "^8.46.3",
     "mocha": "^11.7.5",
@@ -62,6 +63,7 @@
     "glob": "^11.0.3",
     "npm-run-all": "^4.1.5",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "assert": "^2.1.0"
+    "assert": "^2.1.0",
+    "sinon": "^18.0.0"
   }
 }
