feat(vscode-extension): Implement NoteService and integrate with NoteTreeDataProvider (T18.4, T18.5)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ node_modules/
 dist/
 *.log
 .angular/
+
+# VS Code Extension
+note-app-vs-code/dist/
+note-app-vs-code/.vscode-test-web/
+note-app-vs-code/package-lock.json
