--- a/note-app-vs-code/package.json
+++ b/note-app-vs-code/package.json
@@ -9,7 +9,8 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+  ],
   "browser": "./dist/web/extension.js",
   "contributes": {
     "commands": [
@@ -31,7 +32,9 @@
       "noteapp-explorer": [
         {
           "id": "noteapp.notes",
-          "name": "My Notes"
+          "name": "My Notes",
+          "icon": "resources/note.svg"
+
         }
       ]
     }
@@ -64,6 +67,7 @@
     "npm-run-all": "^4.1.5",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "assert": "^2.1.0",
-    "sinon": "^18.0.0"
+    "sinon": "^18.0.0",
+    "axios": "^0.27.2"
   }
 }
